--- a/src/component/pageThree/pageThree.less
+++ b/src/component/pageThree/pageThree.less
@@ -3,6 +3,6 @@
     height: 100%;
     padding: 20px 20px 0 20px;
     .ant-tabs {
-        height: calc(100% - 36px);
+        height: ~'calc(100% - 36px)';
     }
 }
